[gd_scene load_steps=2 format=3 uid="uid://cbtnbb03jb1u6"]

[ext_resource type="Script" path="res://src/ui/components/info_panel/info_panel.gd" id="1_blhep"]

[node name="Contro_InfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blhep")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 128.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Control" type="Control" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label_Field" type="Label" parent="Panel/MarginContainer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Scene:"

[node name="Label_Value" type="Label" parent="Panel/MarginContainer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "--"

[node name="Button_MoreOrLess" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -5.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 9
toggle_mode = true
text = "MORE"

[connection signal="toggled" from="Panel/Button_MoreOrLess" to="." method="_on_button_more_or_less_toggled"]
